fix large icons on mobile

--- a/src/components/content/_content.scss
+++ b/src/components/content/_content.scss
@@ -17,6 +17,10 @@
                 path {
                     fill: $accent-dark;
                 }
+                @include breakpoint(xs) {
+                    width: 4rem;
+                    margin: 0 0.5rem;
+                }
             }
         }
     }
